tests/paczka1/small_fuzzy/52508637.err
Error in line 2: rn93ETo A383 6,8
Error in line 4: SNyjmsdHP S503 52,4
Error in line 8: SNyjmsdHP S529 91,6
